tests/ok/meta-quote-syntax.ari
@cfg(false)
fn generated() -> i64 {
  let quoted = ~!(fn ~(name)(~(args)) -> i64 {
    return ~(body);
  });
  return 0;
}

fn main() -> i64 {
  return 0;
}
