tests/errors/item-macro-unknown.ari
missing_item!(fn generated() -> i64 { return 1 });

fn main() -> i64 {
  return 0;
}
